K8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: notification-system
  labels:
    name: notification-system
    environment: production
