K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-ingress
  namespace: notification-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: notification-producer.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notification-producer
            port:
              number: 8081
  - host: notification-dispatcher.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notification-dispatcher
            port:
              number: 8082
